Fixes spacing between navbar and tabs

--- a/app/assets/stylesheets/tabs.css.scss
+++ b/app/assets/stylesheets/tabs.css.scss
@@ -10,8 +10,8 @@
 		text-decoration: none;
 		color: black;
 		text-shadow: none;
-		padding-top: 8px;
-		padding-bottom: 8px;
+		//padding-top: 8px;
+		//padding-bottom: 8px;
 		margin-top: 2px;
 		margin-bottom: 2px;
 		-webkit-border-radius: 5px;
